# DesktopMusicPlayer

./: .gitignore  README.md  package-lock.json  package.json  testSetup.ts  tsconfig.json  vite.config.ts
src/: MusicPlayer.css  MusicPlayer.tsx  main.css  main.tsx
src-tauri/: .env  .taurignore  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/2025-04-04-002118_create_music_database/: down.sql  up.sql
src-tauri/migrations/2025-04-06-212259_create_settings/: up.sql
src-tauri/src/: audio_player.rs  file_scanner.rs  lib.rs  main.rs  music_database.rs  schema.rs  theme_thread.rs
src-tauri/src/audio_player/: audio_thread.rs  mod.rs
src-tauri/src/database/: file_scanner.rs  mod.rs  settings_database.rs
src-tauri/src/database/music_database/: album.rs  album_artist.rs  mod.rs  track_to_process.rs
src-tauri/src/music_database/: album.rs  album_artist.rs  artist.rs  genre.rs  mod.rs  track.rs  track_to_process.rs
src/common/: Hooks.ts  Utilities.ts
src/components/: ArtistCard.tsx  BottomBar.tsx  LeftSidebar.tsx  MainPane.tsx  MainView.tsx  TopBar.tsx
src/components/AlbumArtistBrowser/: AlbumArtistBrowser.tsx  AlbumArtistCard.tsx
src/components/AlbumBrowser/: AlbumBrowser.tsx  (+1 more)
src/dataObjects/: AlbumArtistData.ts  AlbumData.ts  GenreData.ts  NowPlayingData.ts  SettingData.ts  TrackData.ts
src/hooks/: SingleAndDoubleClick.ts
src/navigation/: MusicPlayerRoutes.tsx
src/state/: NowPlayingStore.ts  SelectedGenreStore.ts  SettingsStore.ts
src/tests/: MockObjects.ts
src/utilities/: Utilities.ts
(+109 files in other folders)
